force-app/main/default/objects/Deal_Review__c/Deal_Review__c.object-meta.xml
<CustomObject>
    <description>Used to display sharepoint Deal Reviews and their statuses on the opportunity related lists.</description>
    <label>Deal Review</label>
    <nameField>
        <label>Deal Review</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>