force-app/main/default/objects/Deal_Review__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Status of Sharepoint Deal Review Approval</description>
    <inlineHelpText>Status of Sharepoint Deal Review Approval</inlineHelpText>
    <label>Approval Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>