force-app/main/default/objects/Deal_Review__c/fields/Deal_Review_Description__c.field-meta.xml
<CustomField>
    <fullName>Deal_Review_Description__c</fullName>
    <label>Deal Review Description</label>
    <type>TextArea</type>
</CustomField>