force-app/main/default/objects/Deal_Review__c/fields/Deal_Review_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_Review_ID__c</fullName>
    <description>Sharepoint Deal Review ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Sharepoint Deal Review ID</inlineHelpText>
    <label>Deal Review ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>